--- a/src/app/inicio-page/inicio-page.page.scss
+++ b/src/app/inicio-page/inicio-page.page.scss
@@ -2,7 +2,21 @@
   margin: 2rem;
 }
 
+ion-icon {
+  color: white;
+}
 
+.col-slider-icon{
+  padding: 0 0 0 0.7rem;
+}
+
+.col-slider{
+  padding: 0 0.5rem 0 0.5rem;
+}
+
+.margin-grid{
+  margin: 0rem 0.5rem 0.5rem 0.5rem;
+}
 
 .img-grid-resultado{
   text-align: center;
