--- a/src/app/list-competencias-admin/list-competencias-admin.page.scss
+++ b/src/app/list-competencias-admin/list-competencias-admin.page.scss
@@ -1,3 +1,19 @@
 .button-disable-comp{
   text-align: right;
 }
+
+.visualiza-editado{
+  background-color: lightgreen;
+  position: relative;
+  animation-name: mover;
+  animation-duration: 1s;
+  animation-iteration-count: initial;
+}
+
+@keyframes mover {
+  from {left: 0px;}
+  to {left: 50px;}
+}
+
+
+
