--- a/src/app/list-competencias-admin/list-competencias-admin.page.html
+++ b/src/app/list-competencias-admin/list-competencias-admin.page.html
@@ -6,6 +6,7 @@
         <ion-title class="text">Competencias activas</ion-title>
       </ion-button>
     </ion-buttons>
+    <p class="ion-no-margin ion-no-padding text-size-medium">Lista de competencias activas</p>
   </ion-toolbar>
 </ion-header>
 
