--- a/src/app/list-competencias/list-competencias.page.html
+++ b/src/app/list-competencias/list-competencias.page.html
@@ -6,6 +6,7 @@
         <ion-title class="text">Competencias</ion-title>
       </ion-button>
     </ion-buttons>
+    <p class="ion-no-margin ion-no-padding text-size-medium">Competencias del mundo</p>
   </ion-toolbar>
 </ion-header>
 
