--- a/src/app/list-users/list-users.page.html
+++ b/src/app/list-users/list-users.page.html
@@ -6,6 +6,7 @@
         <ion-title class="text">Lista de usuarios</ion-title>
       </ion-button>
     </ion-buttons>
+    <p class="ion-no-margin ion-no-padding text-size-medium">Lista de usuarios registrados</p>
   </ion-toolbar>
 </ion-header>
 
