--- a/src/app/modificar-enfrentamientos/modificar-enfrentamientos.page.scss
+++ b/src/app/modificar-enfrentamientos/modificar-enfrentamientos.page.scss
@@ -32,3 +32,16 @@
   font-weight: 600;
   text-align: center !important;
 }
+
+.noHabilitado{
+  color: gray;
+
+}
+
+.habilitado{
+  color: black;
+}
+
+.col-title-fechas{
+  margin: 1rem 1rem 0rem 1rem;
+}
