--- a/src/app/modificar-enfrentamientos/modificar-enfrentamientos.page.html
+++ b/src/app/modificar-enfrentamientos/modificar-enfrentamientos.page.html
@@ -3,9 +3,9 @@
         <ion-buttons slot="start">
             <ion-button (click)="volver()">
                 <ion-icon name="arrow-back-outline"></ion-icon>
-                <ion-title class="text-header">Edición de enfrentamientos</ion-title>
             </ion-button>
         </ion-buttons>
+        <p class="ion-no-margin ion-no-padding text-size-medium">Edición de datos</p>
     </ion-toolbar>
 </ion-header>
 
@@ -24,25 +24,32 @@
 
 
 
+
+
 <ion-content [fullscreen]="true">
+    <ion-row>
+        <ion-col class="col-title-fechas" [size]="12">
+            <p [ngClass]="!seleccionoUnaComp?'noHabilitado':'habilitado'" class="ion-no-padding ion-no-margin">Fechas:</p>
+        </ion-col>
+        <ion-col [size]="12" class="display-flex">
+            <ion-select class="margin-auto" [disabled]="!seleccionoUnaComp" [value]="fechaAVisualizarPorActualidad" [(ngModel)]="fechaAVisualizarPorActualidad" (ngModelChange)="fechaEvent($event)" placeholder="Seleccione una fecha">
+                <div *ngFor="let fechaComp of this.fechasCompetencia">
+                    <ion-select-option value="{{fechaComp}}" (click)="filtrarPartidosPorFecha(fechaComp)"> {{fechaComp}}</ion-select-option>
+                </div>
+            </ion-select>
+        </ion-col>
+    </ion-row>
     <ion-row>
         <ion-col [size]="12" *ngIf="isCargando">
             <ion-progress-bar color="primary" type="indeterminate"></ion-progress-bar>
             <p>Aguarde, cargando enfrentamientos de <b>{{competenciaSeleccionada}}</b></p>
-            <app-animation-progress></app-animation-progress>
-            <app-animation-progress></app-animation-progress>
-            <app-animation-progress></app-animation-progress>
-            <app-animation-progress></app-animation-progress>
-            <app-animation-progress></app-animation-progress>
-            <app-animation-progress></app-animation-progress>
-            <app-animation-progress></app-animation-progress>
         </ion-col>
     </ion-row>
 
     <ion-grid>
         <ion-row>
             <ion-col [size]="12">
-                <ion-list *ngFor="let enfrent of enfrentamientos | filter:competenciaSeleccionada">
+                <ion-list *ngFor="let enfrent of partidosAVisualizar | filter:competenciaSeleccionada">
                         <ion-row>
                             <ion-col [size]="12">
                                 <ion-row>
