--- a/src/app/partidos/partidos.page.html
+++ b/src/app/partidos/partidos.page.html
@@ -15,7 +15,7 @@
 </ion-header>
 
 <ion-content class="bg-image no-scroll">
-    <ion-row>
+    <ion-row style="margin-top: 1rem">
         <ion-col class="display-flex" [size]="6">
             <ion-button class="margin-auto" (click)="buscarGrupo()">
                 <ion-icon name="search-outline"></ion-icon>
