--- a/src/app/registro/registro.page.html
+++ b/src/app/registro/registro.page.html
@@ -6,7 +6,7 @@
       </ion-button>
       <ion-title class="text-header">Registro</ion-title>
     </ion-buttons>
-    <p class="ion-no-margin ion-no-padding text-size-medium">Alta de usuarios</p>
+    <p class="ion-no-margin ion-no-padding text-size-medium">Alta de usuario</p>
   </ion-toolbar>
 </ion-header>
 
