--- a/src/app/terminos/terminos.component.html
+++ b/src/app/terminos/terminos.component.html
@@ -6,6 +6,7 @@
                 <ion-title class="text">Terminos y condiciones</ion-title>
             </ion-button>
         </ion-buttons>
+        <p>Términos y condiciones</p>
     </ion-toolbar>
 </ion-header>
 
