--- a/src/app/create-group/create-group.page.html
+++ b/src/app/create-group/create-group.page.html
@@ -11,15 +11,15 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="bg-image no-scroll">
   <form>
     <ion-grid>
       <ion-row>
         <ion-col style="text-align: center">
-          <ion-label class="label">Nombre grupo:</ion-label>
+          <ion-label class="text-white label">Nombre grupo:</ion-label>
         </ion-col>
         <ion-item>
-          <ion-input name="nameGrupo" [(ngModel)]="group.nameGrupo" type="text" class="form-control"
+          <ion-input name="nameGrupo" [(ngModel)]="group.nameGrupo" type="text" class="text-white form-control"
                      placeholder="Juan56"></ion-input>
         </ion-item>
       </ion-row>
