--- a/src/app/inicio-page/inicio-page.page.scss
+++ b/src/app/inicio-page/inicio-page.page.scss
@@ -10,6 +10,10 @@ ion-icon {
   padding: 0 0 0 0.7rem;
 }
 
+.barra-progreso-pronosticos{
+  margin: 1rem;  
+}
+
 .col-slider{
   padding: 0 0.5rem 0 0.5rem;
 }
