--- a/src/app/list-enfrentamientos/list-enfrentamientos.page.scss
+++ b/src/app/list-enfrentamientos/list-enfrentamientos.page.scss
@@ -47,15 +47,22 @@ display: flex;
 .row-localia{
 }
 
+.row-fechas{
+  margin:0rem 0rem 0rem 1rem
+}
+
+
 .text-localia{
   padding-left: 3px;
 }
 
 .logo-equipo{
-  height: 15%;
-  width: 15%;
+  height: 1.6rem;
+  width: 2rem;
   padding-right: 5px;
 }
+
+
 .col-puntaje{
 
 }
@@ -141,10 +148,16 @@ ion-card {
   max-height: 95%;
   display: flex;
   flex-direction: column;
+  margin: 0.5rem;
 }
 
 ion-grid{
   width: 100%;
+  background-color: #F5F5F5;
+}
+
+.badge-color-por-jugar{
+  background-color: #41a45f;
 }
 
 .text-negrita{
