--- a/src/app/modificar-enfrentamientos/modificar-enfrentamientos.page.scss
+++ b/src/app/modificar-enfrentamientos/modificar-enfrentamientos.page.scss
@@ -9,6 +9,7 @@
 .display-flex{
   display: flex;
 }
+
 .col-size-resultados{
   height: 2.5rem;
 
@@ -34,12 +35,22 @@
 }
 
 .noHabilitado{
-  color: gray;
+  color: white;
+}
 
+.col-fechas{
+  border-radius: 0.6rem;
+  background-color: #FF7E4E;
+  margin: 0rem 1rem 0rem 1rem
+}
+
+.card-enfrentamiento{
+  border-radius: 0.6rem;
+  margin: 0.4rem;
 }
 
 .habilitado{
-  color: black;
+  color: white;
 }
 
 .col-title-fechas{
