--- a/src/app/inicio-page/inicio-page.page.scss
+++ b/src/app/inicio-page/inicio-page.page.scss
@@ -34,6 +34,24 @@ ion-icon {
   font-size: 1rem;
 }
 
+.text-grid-notificaciones{
+  text-align: center;
+  margin: 0.5rem 0rem 0rem 0rem;
+  color: var(--ion-color-primary);;
+  font-size: 1rem;
+}
+
+.grupos-text{
+  padding: 1rem 0rem 0.2rem 0rem;
+  margin: 0rem;
+}
+
+.contenedor-flexbox {
+  display: flex; /*Convertimos al menú en flexbox*/
+  justify-content: space-between; /*Con esto le indicamos que margine todos los items que se encuentra adentro hacia la derecha e izquierda*/
+  align-items: center; /*con esto alineamos de manera vertical*/
+}
+
 .slides_banner_principal {
   max-height: 30rem !important;
   position: relative;
