lista de enfrenta

--- a/src/app/list-enfrentamientos/list-enfrentamientos.page.html
+++ b/src/app/list-enfrentamientos/list-enfrentamientos.page.html
@@ -38,8 +38,8 @@
         <ion-col [size]="12" class="ion-no-margin ion-no-padding">
           <ion-item  class="ion-no-margin ion-no-padding">
             <ion-badge *ngIf="part.estadoFecha === 1" slot="start" fill="outline" class="badge-color-por-jugar">Por jugar</ion-badge>
-            <ion-badge *ngIf="part.estadoFecha === 2" slot="start" fill="outline" style="background-color: orange">Jugando</ion-badge>
-            <ion-badge *ngIf="part.estadoFecha === 3" slot="start" fill="outline" style="background-color: red">Finalizado</ion-badge>
+            <ion-badge *ngIf="part.estadoFecha === 2" slot="start" fill="outline" style="background-color: red">Jugando</ion-badge>
+            <ion-badge *ngIf="part.estadoFecha === 3" slot="start" fill="outline" style="background-color: black">Finalizado</ion-badge>
             <!--
             <ion-badge *ngIf="part.short.includes('Time to be defined') || part.short.includes('Not Started')" slot="start" fill="outline" class="badge-color-por-jugar">Por jugar</ion-badge>
             <ion-badge *ngIf="part.short.includes('Match Finished')" slot="start" fill="outline">Finalizado</ion-badge>
