--- a/src/app/list-enfrentamientos/list-enfrentamientos.page.scss
+++ b/src/app/list-enfrentamientos/list-enfrentamientos.page.scss
@@ -160,6 +160,10 @@ ion-grid{
   background-color: #41a45f;
 }
 
+.badge-color-indefinido{
+  background-color: black;
+}
+
 .text-negrita{
   font-size: 1rem;
   font-weight: 850;
